[W.I.P] Cadastro de Costureira - Carregamento de Imagem

--- a/app/src/main/res/layout/activity_cadastro_cliente.xml
+++ b/app/src/main/res/layout/activity_cadastro_cliente.xml
@@ -23,15 +23,16 @@
 
             <ImageView
                 android:id="@+id/activity_cadastro_cliente_adiciona_imagem"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="128dp"
+                android:layout_height="128dp"
+                android:scaleType="centerCrop"
                 android:layout_marginTop="16dp"
                 android:background="@drawable/image_frame"
                 android:minWidth="128dp"
                 android:minHeight="128dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"/>
 
             <EditText
                 android:id="@+id/activity_cadastro_cliente_txt_nome"
