--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -23,12 +23,11 @@
 
             <ImageView
                 android:id="@+id/activity_cadastro_adiciona_imagem"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="128dp"
+                android:layout_height="128dp"
+                android:scaleType="centerCrop"
                 android:layout_marginTop="16dp"
                 android:background="@drawable/image_frame"
-                android:minWidth="128dp"
-                android:minHeight="128dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
