--- a/app/src/main/res/layout/dialog_cria_medida.xml
+++ b/app/src/main/res/layout/dialog_cria_medida.xml
@@ -6,26 +6,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".home.pedido.CriaMedidaDialogFragment">
 
-<!--    <ExpandableListView-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="match_parent"-->
-<!--        android:id="@+id/dialog_cria_medida_tipo"-->
-<!--        android:indicatorEnd="?android:attr/expandableListPreferredChildIndicatorRight"-->
-<!--        app:layout_constraintTop_toTopOf="parent"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        android:divider="@color/amarelo_light"-->
-<!--        android:dividerHeight="0.5dp"-->
-<!--        app:layout_constraintBottom_toTopOf="@id/dialog_cria_medida"/>-->
-
     <Spinner
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:id="@+id/dialog_cria_medida_spinner"
+        android:gravity="left"
+        android:dropDownVerticalOffset="40dp"
+        android:popupBackground="@color/amarelo_light"
         app:layout_constraintStart_toStartOf="@id/dialog_cria_medida"
         app:layout_constraintEnd_toEndOf="@id/dialog_cria_medida"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="@id/dialog_cria_medida"/>
+        app:layout_constraintBottom_toBottomOf="@id/dialog_cria_medida"
+        android:background="@drawable/background_spinner"/>
 
     <EditText
         android:id="@+id/dialog_cria_medida"
