Cadastro de Cliente - Criação do cliente com sucesso

--- a/app/src/main/res/layout/recycler_clientes_item.xml
+++ b/app/src/main/res/layout/recycler_clientes_item.xml
@@ -29,7 +29,10 @@
                 android:id="@+id/clientes_item_image"
                 android:layout_width="75dp"
                 android:layout_height="75dp"
+                android:maxWidth="75dp"
+                android:maxHeight="75dp"
                 android:layout_margin="16dp"
+                android:scaleType="fitXY"
                 android:background="@drawable/image_frame"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
