--- a/app/src/main/res/drawable/image_frame.xml
+++ b/app/src/main/res/drawable/image_frame.xml
@@ -1,30 +1,7 @@
-<?xml version="1.0" encoding="utf-8"?>
-<vector
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
-    android:width="70dp"
-    android:height="70dp"
-    android:viewportWidth="70"
-    android:viewportHeight="70"
-    >
-
-    <group>
-
-        <clip-path
-            android:pathData="M0 0H70V70H0V0Z"
-            />
-
-        <path
-            android:pathData="M0 0V70H70V0"
-            android:fillColor="#00FFFFFF"
-            />
-
-        <path
-            android:pathData="M0 0H70V70H0V0Z"
-            android:strokeWidth="2"
-            android:strokeColor="#000000"
-            />
-
-    </group>
-
-</vector>
+<?xml version="1.0" encoding="UTF-8"?>
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <solid android:color="#0057181B"/>
+    <stroke android:width="2dp" android:color="@color/black" />
+    <padding android:left="2dp" android:top="2dp" android:right="2dp"
+        android:bottom="2dp"/>
+</shape>
