--- a/app/src/main/res/layout/activity_cadastro_pedido.xml
+++ b/app/src/main/res/layout/activity_cadastro_pedido.xml
@@ -80,17 +80,18 @@
                 app:layout_constraintTop_toBottomOf="@id/activity_cadastro_pedido_descricao" />
 
 
-
-            <TextView
-                android:id="@+id/activity_cadastro_pedido_nome_cliente"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="8dp"
-                android:text="Nome do Cliente"
-                android:textSize="16sp"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
+            <Spinner
+                android:id="@+id/activity_cadastro_pedido_spinner_nome_cliente"
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:background="@drawable/background_spinner"
+                android:dropDownVerticalOffset="40dp"
+                android:layout_marginTop="8dp"
+                android:gravity="center"
+                android:popupBackground="@color/amarelo_light"
+                app:layout_constraintBottom_toTopOf="@id/activity_cadastro_pedido_txt_nome_cliente"
+                app:layout_constraintEnd_toEndOf="@+id/activity_cadastro_pedido_txt_descricao"
+                app:layout_constraintStart_toStartOf="@+id/activity_cadastro_pedido_txt_descricao"
                 app:layout_constraintTop_toBottomOf="@id/activity_cadastro_pedido_txt_descricao" />
 
             <EditText
@@ -99,12 +100,13 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="78dp"
                 android:layout_marginEnd="78dp"
+                android:layout_marginTop="8dp"
                 android:background="@drawable/text_cadastro_background"
                 android:inputType="textCapWords"
                 android:padding="4dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/activity_cadastro_pedido_nome_cliente" />
+                app:layout_constraintTop_toBottomOf="@id/activity_cadastro_pedido_spinner_nome_cliente" />
 
             <TextView
                 android:id="@+id/activity_cadastro_pedido_materiais"
@@ -225,7 +227,7 @@
             <RadioGroup
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/activity_cadastro_pedido_gp_prioridade"
+                android:id="@+id/activity_cadastro_pedido_rg_prioridade"
                 app:layout_constraintTop_toBottomOf="@id/activity_cadastro_pedido_linha_prioridade"
                 app:layout_constraintStart_toStartOf="parent"
                 android:gravity="center"
@@ -264,7 +266,7 @@
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/activity_cadastro_pedido_gp_prioridade" />
+                app:layout_constraintTop_toBottomOf="@id/activity_cadastro_pedido_rg_prioridade" />
 
             <EditText
                 android:id="@+id/activity_cadastro_pedido_txt_data_criacao"
