--- a/app/src/main/res/layout/activity_cadastro_pedido.xml
+++ b/app/src/main/res/layout/activity_cadastro_pedido.xml
@@ -11,8 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@id/activity_cadastro_pedido_btn_criar"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="-16dp">
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -79,6 +78,18 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/activity_cadastro_pedido_descricao" />
 
+            <TextView
+                android:id="@+id/activity_cadastro_pedido_add_cliente"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
+                android:text="Adicionar cliente"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/activity_cadastro_pedido_txt_descricao" />
+
 
             <Spinner
                 android:id="@+id/activity_cadastro_pedido_spinner_nome_cliente"
@@ -92,7 +103,7 @@
                 app:layout_constraintBottom_toTopOf="@id/activity_cadastro_pedido_txt_nome_cliente"
                 app:layout_constraintEnd_toEndOf="@+id/activity_cadastro_pedido_txt_descricao"
                 app:layout_constraintStart_toStartOf="@+id/activity_cadastro_pedido_txt_descricao"
-                app:layout_constraintTop_toBottomOf="@id/activity_cadastro_pedido_txt_descricao" />
+                app:layout_constraintTop_toBottomOf="@id/activity_cadastro_pedido_add_cliente" />
 
             <EditText
                 android:id="@+id/activity_cadastro_pedido_txt_nome_cliente"
@@ -101,9 +112,11 @@
                 android:layout_marginStart="78dp"
                 android:layout_marginEnd="78dp"
                 android:layout_marginTop="8dp"
+                android:hint="Nome do Cliente"
                 android:background="@drawable/text_cadastro_background"
                 android:inputType="textCapWords"
-                android:padding="4dp"
+                android:visibility="gone"
+                android:paddingStart="8dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/activity_cadastro_pedido_spinner_nome_cliente" />
@@ -137,8 +150,8 @@
                 android:layout_height="2dp"
                 android:layout_marginTop="8dp"
                 android:background="@drawable/linha_separacao"
-                app:layout_constraintEnd_toEndOf="@id/activity_cadastro_pedido_txt_nome_cliente"
-                app:layout_constraintStart_toStartOf="@id/activity_cadastro_pedido_txt_nome_cliente"
+                app:layout_constraintEnd_toEndOf="@id/activity_cadastro_pedido_txt_descricao"
+                app:layout_constraintStart_toStartOf="@id/activity_cadastro_pedido_txt_descricao"
                 app:layout_constraintTop_toBottomOf="@id/activity_cadastro_pedido_materiais" />
 
             <androidx.recyclerview.widget.RecyclerView
@@ -184,8 +197,8 @@
                 android:layout_height="2dp"
                 android:layout_marginTop="8dp"
                 android:background="@drawable/linha_separacao"
-                app:layout_constraintEnd_toEndOf="@id/activity_cadastro_pedido_txt_nome_cliente"
-                app:layout_constraintStart_toStartOf="@id/activity_cadastro_pedido_txt_nome_cliente"
+                app:layout_constraintEnd_toEndOf="@id/activity_cadastro_pedido_txt_descricao"
+                app:layout_constraintStart_toStartOf="@id/activity_cadastro_pedido_txt_descricao"
                 app:layout_constraintTop_toBottomOf="@id/activity_cadastro_pedido_medidas" />
 
             <androidx.recyclerview.widget.RecyclerView
@@ -220,8 +233,8 @@
                 android:layout_height="2dp"
                 android:layout_marginTop="8dp"
                 android:background="@drawable/linha_separacao"
-                app:layout_constraintEnd_toEndOf="@id/activity_cadastro_pedido_txt_nome_cliente"
-                app:layout_constraintStart_toStartOf="@id/activity_cadastro_pedido_txt_nome_cliente"
+                app:layout_constraintEnd_toEndOf="@id/activity_cadastro_pedido_txt_descricao"
+                app:layout_constraintStart_toStartOf="@id/activity_cadastro_pedido_txt_descricao"
                 app:layout_constraintTop_toBottomOf="@id/activity_cadastro_pedido_prioridade" />
 
             <RadioGroup
