--- a/app/src/main/res/layout/recycler_medidas_materiais_item.xml
+++ b/app/src/main/res/layout/recycler_medidas_materiais_item.xml
@@ -8,9 +8,11 @@
     <androidx.cardview.widget.CardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:minWidth="100dp"
-        android:layout_margin="8dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:backgroundTint="#7DFBFF"
+        android:minWidth="100dp"
         app:cardCornerRadius="28dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -27,8 +29,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
                 android:layout_marginTop="4dp"
+                android:layout_marginEnd="8dp"
                 android:layout_marginBottom="4dp"
                 android:gravity="center"
                 android:text="Material"
@@ -44,9 +46,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="4dp"
                 android:gravity="center"
+                android:text="item 2"
                 android:textSize="12sp"
                 android:textStyle="bold"
-                android:text="item 2"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="@id/recycler_medidas_materiais_item_txt"
                 app:layout_constraintStart_toStartOf="@id/recycler_medidas_materiais_item_txt"
